# Agentic-AI

./: README.md
chainlit_agents/ai_travel_agent/: main.py  pyproject.toml  travel_tool.py
chainlit_agents/multi_ai_system/: agent.py  pyproject.toml
multi_ai_system/: main.py
terminal_based_project/Career-Mentor-Agent/: main.py  pyproject.toml  roadmap_tool.py
terminal_based_project/game_master_agent/: main.py  pyproject.toml  tool.py
terminal_based_project/grammar_corrector_agent/: pyproject.toml
terminal_based_project/grammar_corrector_agent/src/agentic_ai/: __init__.py  main.py
terminal_based_project/whatsapp_agent/: main.py  pyproject.toml  whatsapp.py
