[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AlizaGhaffar", email = "alizaghaffar23123@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai-agents>=0.0.19",
]

[project.scripts]
agentic-ai = "agentic_ai:main"
firstagent = "agentic_ai.main:agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
